Developer mode added for debugging and logging real-time data in console

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -29,7 +29,8 @@ var config = {
     		{'App-userID': 234982348923},
     		{'App-session': 'x2872034ULT'}
     	]
-    }
+    },
+    developerMode: true
 };
 var Tos = new TimeOnSiteTracker(config);
 </script>
