Added new folders in demo site to check various TOS cookie options

--- a/src/public/milliseconds/index.html
+++ b/src/public/milliseconds/index.html
@@ -20,6 +20,7 @@ TimeOnSiteTracker loaded!
 
 
 <script type="text/javascript">
+//localhost:3000/static/milliseconds/index.html
 var config = {
     request: { // presence of request object denotes that data is to be saved in local storage
     	url: 'http://localhost:4500/data/tos',
