Added validation test cases and changed meaningful variable names

--- a/src/public/path1/index.html
+++ b/src/public/path1/index.html
@@ -30,7 +30,7 @@ var config = {
         ]
     },
     TOSCookie: {
-        path: '/static/site1',
+        path: '/static/path1',
         domain: 'localhost'
     }
 };
