--- a/src/public/path2/index.html
+++ b/src/public/path2/index.html
@@ -30,7 +30,7 @@ var config = {
     },
     developerMode: true,
     TOSCookie: {
-        path: '/static/site2',
+        path: '/static/path2',
         domain: 'localhost'
     }
 };
