--- a/src/public/subdomain1/index.html
+++ b/src/public/subdomain1/index.html
@@ -20,7 +20,7 @@ TimeOnSiteTracker loaded!
 
 
 <script type="text/javascript">
-//localdata-tos.chennai:3000/static/subdomain1/index.html
+//blog.localdata-tos.chennai:3000/static/subdomain1/index.html
 var config = {
 	trackBy: 'seconds',
     developerMode: true,
