--- a/src/public/subdomain2/index.html
+++ b/src/public/subdomain2/index.html
@@ -20,7 +20,7 @@ TimeOnSiteTracker loaded!
 
 
 <script type="text/javascript">
-//localdata-tos.chennai:3000/static/subdomain2/index.html
+//api.localdata-tos.chennai:3000/static/subdomain2/index.html
 var config = {
 	trackBy: 'seconds',
     developerMode: true,
