--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <p class="view"><a href="https://github.com/saleemkce/timeonsite">View the Project on GitHub <small>saleemkce/timeonsite</small></a></p>
 
-        <p><a href="v1/index.html">v1.0.0</a></p>
+        <p><a href="v1/backend.html">v1.0.0</a></p>
 
         <p>
           <a href="#what-is-timeOnSite-tracker">What is TOS?</a><br/>
@@ -707,5 +707,6 @@ var activityData = Tos.endActivity({}, manualProcess);
 html code conversion @
 http://www.web2generators.com/html-based-tools/online-html-entities-encoder-and-decoder 
 
+bundle exec jekyll serve --port=8877
 bundle exec jekyll serve --port=80
 -->
