Updated API URL to save data

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -24,7 +24,7 @@ var config = {
 	trackBy: 'seconds',
 	blacklistUrl: ['http://localhost:3000/static/__index.html'],
     request: { // presence of request object denotes that data is to be saved in local storage
-    	url: 'http://localhost:4500/data/tos',
+    	url: 'http://localhost:4500/tos',
     	headers: [
     		{'App-userID': 234982348923},
     		{'App-session': 'x2872034ULT'}
