--- a/src/public/milliseconds/index.html
+++ b/src/public/milliseconds/index.html
@@ -23,7 +23,7 @@ TimeOnSiteTracker loaded!
 //localhost:3000/static/milliseconds/index.html
 var config = {
     request: { // presence of request object denotes that data is to be saved in local storage
-    	url: 'http://localhost:4500/data/tos',
+    	url: 'http://localhost:4500/tos',
     	headers: [
     		{'App-userID': 234982348923},
     		{'App-session': 'x2872034ULT'}
