--- a/src/public/path2/index.html
+++ b/src/public/path2/index.html
@@ -24,7 +24,7 @@ TimeOnSiteTracker loaded!
 var config = {
 	trackBy: 'seconds',
     request: { // presence of request object denotes that data is to be saved in local storage
-        url: 'http://localhost:4500/data/tos',
+        url: 'http://localhost:4500/tos',
         headers: [
         ]
     },
