--- a/src/public/subdomain1/index.html
+++ b/src/public/subdomain1/index.html
@@ -25,7 +25,7 @@ var config = {
 	trackBy: 'seconds',
     developerMode: true,
     request: { // presence of request object denotes that data is to be saved in local storage
-        url: 'http://localhost:4500/data/tos',
+        url: 'http://localhost:4500/tos',
         headers: [
         ]
     },
