Fix for handling default URL encoding

--- a/src/public/milliseconds/index.html
+++ b/src/public/milliseconds/index.html
@@ -31,8 +31,8 @@ var config = {
     },
     developerMode: true,
     TOSCookie: {
-        path: '/',
-        //domain: ((window.location.hostname) ? 'localhost' : ('.' + window.location.hostname))
+        path: '/static/milliseconds',
+        domain: 'localhost'
     }
 };
 var Tos = new TimeOnSiteTracker(config);
