--- a/src/public/secure/index.html
+++ b/src/public/secure/index.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset='UTF-8'>
 <title>Test Node application - TimeOnSiteTracker</title>
-<script src="../js/timeonsitetracker.js"></script>
 </head>
 
 <body>
@@ -11,33 +10,12 @@ TimeOnSiteTracker loaded!
 <br/>
 <a target ='_blank' href='http://www.example.com'>EXAMPLE site with Secure cookie option</a>
 <br/>
+<!-- 
+    http://localhost:3000/static/secure/index.html
+    
+    https/Secure URL test moved as separate application.
 
-<!-- <a href='file:///C:/Users/skhan/Desktop/tests/time.html#abcIndio'>anchor tag with # change</a> -->
-
-<a target="_blank" href='index.html'>Same page with _blank option</a><br/>
-
-<a href='index.html#abcIndio'>Same page with hash URL</a>
-
-
-<script type="text/javascript">
-//localhost:3000/static/secure/index.html
-var config = {
-	trackBy: 'seconds',
-    developerMode: true,
-    request: { // presence of request object denotes that data is to be saved in local storage
-        url: 'http://localhost:4500/tos',
-        headers: [
-        ]
-    },
-    TOSCookie: {
-        path: '/static/secure',
-        domain: 'localhost',
-        enforceSecure: true
-    }
-};
-var Tos = new TimeOnSiteTracker(config);
-</script>
-
+-->
 </body>
 
 </html>
